Adjust text on debugging [ci skip]

--- a/news/l3news11.tex
+++ b/news/l3news11.tex
@@ -148,9 +148,8 @@ values across the range of possible outputs.
 
 A new set of debugging functions have been added to the kernel. These allow
 debug code to be enabled locally using the new option \verb|enable-debug| along
-with functions \cs{debug_check_declarations_on:} and
-\cs{debug_check_declarations_off:}. A companying this change, we have improved
-the handling of global/local consistency in variable setting.
+with functions \cs{debug_on:n} and \cs{debug_off:n}. A companying this change, we
+have improved the handling of global/local consistency in variable setting.
 
 \subsection{Mark-up changes in \pkg{l3doc}}
 
