Initial drawing environment set up
Very basic at present: doesn't reset anything, doesn't check sizes, etc.

I've deliberately left out the pgf setting of sizes to -16000pt: I'm not
clear as-yet why these can't all simply be zero. Moreover, if they are
meant to be 'out of the way' they should I feel be -\c_max_dim.

--- a/l3trial/l3draw/l3draw-scopes.dtx
+++ b/l3trial/l3draw/l3draw-scopes.dtx
@@ -60,6 +60,65 @@
 %<@@=draw>
 %    \end{macrocode}
 %
+% \subsection{Drawing environment}
+%
+% \begin{variable}
+%   {\g_@@_xmax_dim, \g_@@_xmin_dim, \g_@@_ymax_dim, \g_@@_ymin_dim}
+%   Used to track the overall (official) size of the image created: may
+%   not actually be the natural size of the content.
+%    \begin{macrocode}
+\dim_new:N \g_@@_xmax_dim
+\dim_new:N \g_@@_xmin_dim
+\dim_new:N \g_@@_ymax_dim
+\dim_new:N \g_@@_ymin_dim
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\l_@@_update_bb_bool}
+%   Flag to indicate that a path (or similar) should update the bounding box
+%   of the drawing.
+%    \begin{macrocode}
+\bool_new:N \l_@@_update_bb_bool
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{variable}{\l_@@_main_box}
+%   Box for setting the drawing.
+%    \begin{macrocode}
+\box_new:N \l_@@_main_box
+%    \end{macrocode}
+% \end{variable}
+%
+% \begin{macro}{\draw_begin:, \draw_end:}
+%   Drawings are created by setting them into a box, then adjusting the box
+%   before inserting into the surroundings. At present the content is simply
+%   collected then dumped: work will be required to manipulate the size as
+%   this data becomes more defined. It may be that a coffin construct is
+%   better here in the longer term: that may become clearer as the code is
+%   completed. Another obvious question is whether/where vertical mode should
+%   be ended (\emph{i.e.}~should this behave like a raw |\hbox| or like
+%   a coffin).
+%    \begin{macrocode}
+\cs_new_protected:Npn \draw_begin:
+  {
+    \hbox_set:Nw \l_@@_main_box
+      \driver_draw_begin:
+      \dim_gzero:N \g_@@_xmax_dim
+      \dim_gzero:N \g_@@_xmin_dim
+      \dim_gzero:N \g_@@_ymax_dim
+      \dim_gzero:N \g_@@_ymin_dim
+      \bool_set_true:N \l_@@_update_bb_bool
+  }
+\cs_new_protected:Npn \draw_end:
+  {
+      \driver_draw_end:
+    \hbox_set_end:
+    \mode_leave_vertical:
+    \box_use_drop:N \l_@@_main_box
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
