l3draw: Basic point arithmetic
Some renaming as a result: make the flow clearer.

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -60,30 +60,106 @@
 %
 % \subsection{Support functions}
 %
-% \begin{macro}{\@@_process_point:nn}
+% \begin{macro}{\@@_point_process:nn}
 %   Execute whatever code is passed to extract the $x$ and $y$ co-ordinates.
 %   The second argument here should itself absorb two arguments.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_process_point:nn #1#2
+\cs_new_protected:Npn \@@_point_process:nn #1#2
   {
     \use:x { \exp_not:n {#2} #1 }
   }
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\@@_point_expand:nnN}
+% \begin{macro}[EXP]{\@@_point_expand_auxi:nnN, \@@_point_expand_auxi:ffN}
+% \begin{macro}[EXP]{\@@_point_expand_auxii:nnnnN}
+% \begin{macro}[EXP]
+%   {\@@_point_expand_auxiii:nnnnN, \@@_point_expand_auxiii:ffnnN}
+%   The aim here is to expand the point expressions fully. As each one will
+%   contain two co-ordinates, we have to \texttt{f}-type expand twice: once
+%   to get the first co-ordinate, and again to get the second one fully
+%   expanded. Once that is all done, the result is passed to the resulting
+%   processor.
+%    \begin{macrocode}
+\cs_new:Npn \@@_point_expand:nnN #1#2#3
+  { \@@_point_expand_auxi:ffN {#1} {#2} #3 }
+\cs_new:Npn \@@_point_expand_auxi:nnN #1#2#3
+  { \@@_point_expand_auxii:nnnnN #1 #2 #3 }
+\cs_generate_variant:Nn \@@_point_expand_auxi:nnN { ff }
+\cs_new:Npn \@@_point_expand_auxii:nnnnN #1#2#3#4#5
+  { \@@_point_expand_auxiii:ffnnN {#2} {#4} {#1} {#3} #5 }
+\cs_new:Npn \@@_point_expand_auxiii:nnnnN #1#2#3#4#5
+  { #5 {#3} {#1} {#4} {#2} }
+\cs_generate_variant:Nn \@@_point_expand_auxiii:nnnnN { ff }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Co-ordinates}	
 %
-% The most basic way of giving points is as simple $(x,y)$ points.
+% The most basic way of giving points is as simple $(x,y)$ co-ordinates.
 %
-% \begin{macro}[EXP]{\draw_point:nn}
+% \begin{macro}[EXP]{\draw_point_coord:nn}
 %   Simply turn the given values into dimensions.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point:nn #1#2
+\cs_new:Npn \draw_point_coord:nn #1#2
   {
     { \fp_to_dim:n {#1} }
     { \fp_to_dim:n {#2} }
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Point expression arithmetic}
+%
+% These functions all take point expressions as arguments.
+%
+% \begin{macro}[EXP]{\draw_point_add:nn, \draw_point_diff:nn}
+% \begin{macro}[EXP]{\@@_point_add:nnnn, \@@_point_diff:nnnn}
+%   Simple maths once the expansion is done.
+%    \begin{macrocode}
+\cs_new:Npn \draw_point_add:nn #1#2
+  {
+    \@@_point_expand:nnN {#1} {#2}
+      \@@_point_diff:nnnn
+  }
+\cs_new:Npn \@@_point_add:nnnn #1#2#3#4
+  {
+    { \fp_to_dim:n { #1 + #3 } }
+    { \fp_to_dim:n { #2 + #4 } }
+  }
+\cs_new:Npn \draw_point_diff:nn #1#2
+  {
+    \@@_point_expand:nnN {#1} {#2}
+      \@@_point_diff:nnnn
+  }
+\cs_new:Npn \@@_point_diff:nnnn #1#2#3#4
+  {
+    { \fp_to_dim:n { #3 - #1 } }
+    { \fp_to_dim:n { #4 - #2 } }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\draw_point_scale:nn}
+% \begin{macro}[EXP]{\@@_point_scale:nnnn}
+%   Much the same idea, but as argument |#1| here is a simple floating point
+%   expression there is a bit of \enquote{cheating} to reuse the expansion
+%   mechanism.
+%    \begin{macrocode}
+\cs_new:Npn \draw_point_scale:nn #1#2
+  {
+    \@@_point_expand:nnN { { \fp_eval:n {#1} } { } } {#2}
+      \@@_point_scale:nnnn
+  }
+\cs_new:Npn \@@_point_scale:nnnn #1#2#3#4
+  {
+    { \fp_to_dim:n { #1 * #3 } }
+    { \fp_to_dim:n { #1 * #4 } }
+  }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Vector support}
@@ -123,7 +199,7 @@
   { \@@_set_vec:nn { y } {#1} }
 \cs_new_protected:Npn \@@_set_vec:nn #1#2
   {
-    \@@_process_point:nn {#2} { \@@_set_vec:nnn {#1} }
+    \@@_point_process:nn {#2} { \@@_set_vec:nnn {#1} }
   }
 \cs_new_protected:Npn \@@_set_vec:nnn #1#2#3
   {
@@ -137,9 +213,9 @@
 %
 % Initialise the vectors.
 %    \begin{macrocode}
-\draw_set_xvec:n { \draw_point:nn { 1cm } { 0cm } }
-\draw_set_yvec:n { \draw_point:nn { 0cm } { 1cm } }
-\draw_set_zvec:n { \draw_point:nn { -0.385cm } { -0.385cm } }
+\draw_set_xvec:n { \draw_point_coord:nn { 1cm } { 0cm } }
+\draw_set_yvec:n { \draw_point_coord:nn { 0cm } { 1cm } }
+\draw_set_zvec:n { \draw_point_coord:nn { -0.385cm } { -0.385cm } }
 %    \end{macrocode}
 %
 % \begin{macro}[EXP]{\draw_point_vec:nn}
