A couple of min/max mixups

--- a/l3trial/l3draw/l3draw-paths.dtx
+++ b/l3trial/l3draw/l3draw-paths.dtx
@@ -95,7 +95,7 @@
     \dim_gset:Nn \g_@@_path_xmax_dim
       { \dim_max:nn \g_@@_path_xmax_dim {#1} }
     \dim_gset:Nn \g_@@_path_xmin_dim
-      { \dim_min:nn \g_@@_path_xmax_dim {#1} }
+      { \dim_min:nn \g_@@_path_xmin_dim {#1} }
     \dim_gset:Nn \g_@@_path_ymax_dim
       { \dim_max:nn \g_@@_path_ymax_dim {#1} }
     \dim_gset:Nn \g_@@_path_ymin_dim
@@ -105,7 +105,7 @@
         \dim_gset:Nn \g_@@_xmax_dim
           { \dim_max:nn \g_@@_xmax_dim {#1} }
         \dim_gset:Nn \g_@@_xmin_dim
-          { \dim_min:nn \g_@@_xmax_dim {#1} }
+          { \dim_min:nn \g_@@_xmin_dim {#1} }
         \dim_gset:Nn \g_@@_ymax_dim
           { \dim_max:nn \g_@@_ymax_dim {#1} }
         \dim_gset:Nn \g_@@_ymin_dim
