--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -78,9 +78,9 @@
 %   {\@@_point_expand_auxiii:nnnnN, \@@_point_expand_auxiii:ffnnN}
 %   The aim here is to expand the point expressions fully. As each one will
 %   contain two co-ordinates, we have to \texttt{f}-type expand twice: once
-%   to get the first co-ordinate, and again to get the second one fully
-%   expanded. Once that is all done, the result is passed to the resulting
-%   processor.
+%   to get the co-ordinate pairs (brace groups), then to deal with each of the
+%   arguments. As the overhead for expansion is small compared with
+%   calculations, everything gets done.
 %    \begin{macrocode}
 \cs_new:Npn \@@_point_expand:nnN #1#2#3
   { \@@_point_expand_auxi:ffN {#1} {#2} #3 }
@@ -88,10 +88,10 @@
   { \@@_point_expand_auxii:nnnnN #1 #2 #3 }
 \cs_generate_variant:Nn \@@_point_expand_auxi:nnN { ff }
 \cs_new:Npn \@@_point_expand_auxii:nnnnN #1#2#3#4#5
-  { \@@_point_expand_auxiii:ffnnN {#2} {#4} {#1} {#3} #5 }
+  { \@@_point_expand_auxiii:ffffN {#1} {#2} {#3} {#4} #5 }
 \cs_new:Npn \@@_point_expand_auxiii:nnnnN #1#2#3#4#5
-  { #5 {#3} {#1} {#4} {#2} }
-\cs_generate_variant:Nn \@@_point_expand_auxiii:nnnnN { ff }
+  { #5 {#1} {#2} {#3} {#4} }
+\cs_generate_variant:Nn \@@_point_expand_auxiii:nnnnN { ffff }
 %    \end{macrocode}
 % \end{macro}
 %
