--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -63,7 +63,7 @@
 %
 % \begin{function}[EXP]{\draw_point_coord:nn}
 %   \begin{syntax}
-%     \cs{draw_coord:nn} \marg{x} \marg{y}
+%     \cs{draw_point_coord:nn} \marg{x} \marg{y}
 %   \end{syntax}
 %
 % \begin{function}[EXP]{\draw_set_xvec:n, \draw_set_yvec:n, \draw_set_zvec:n}
@@ -75,6 +75,11 @@
 %   \begin{syntax}
 %     \cs{draw_point_vec:nn} \marg{xscale} \marg{yscale}
 %     \cs{draw_point_vec:nnn} \marg{xscale} \marg{yscale} \mag{zscale}
+%   \end{syntax}
+%
+% \begin{function}[EXP]{\draw_point_linejoin:nnnn}
+%   \begin{syntax}
+%     \cs{draw_point_linejoin:nn} \marg{P1} \marg{P2} \marg{P3} \marg{P4}
 %   \end{syntax}
 %
 % \end{documentation}
