Fix an incorrect name

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -207,7 +207,7 @@
       \@@_point_linejoin:nnnnnnnn
       {#1} {#2} {#3} {#4}
   }
-\cs_new:Npn \@@_point_linejoin:nnnnnn #1#2#3#4#5#6#7#8
+\cs_new:Npn \@@_point_linejoin:nnnnnnnn #1#2#3#4#5#6#7#8
   {
     \@@_point_linejoin_aux:ffffff
       { \fp_eval:n { #1 * #4 - #2 * #3 } }
