--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -113,6 +113,27 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \subsection{Polar co-ordinates}
+%
+% \begin{macro}[EXP]{\draw_point_polar:nn}
+% \begin{macro}[EXP]{\@@_draw_polar:nw, \@@_draw_polar:fw}
+%   Polar co-ordinates may have either one or two lengths, so there is a need
+%   to do a simple split before the calculation. As the angle gets used twice,
+%   save on any expression evaluation there and force expansion.
+%    \begin{macrocode}
+\cs_new:Npn \draw_point_polar:nn #1#2
+  { \@@_draw_polar:fw { \fp_eval:n {#1} } #2 ~ and ~ #2 ~ \q_stop }
+\cs_new:Npn \@@_draw_polar:nw #1#2 ~ and ~ #3 ~ #4 \q_stop
+  {
+    { \fp_to_dim:n { cosd(#1) * (#2) } }
+    { \fp_to_dim:n { sind(#1) * (#3) } }
+  }
+\cs_generate_variant:Nn \@@_draw_polar:nw { f }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Point expression arithmetic}
 %
 % These functions all take point expressions as arguments.
