l3draw: Stub documentation thus-far

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -65,22 +65,50 @@
 %   \begin{syntax}
 %     \cs{draw_point_coord:nn} \marg{x} \marg{y}
 %   \end{syntax}
+% \end{function}
+%
+% \begin{function}[EXP]{\draw_point_polar:nn}
+%   \begin{syntax}
+%     \cs{draw_point_polar:nn} \marg{angle} \marg{length}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}[EXP]{\draw_point_add:nn}
+%   \begin{syntax}
+%     \cs{draw_point_add:nn} \marg{point expr1} \marg{point expr2}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}[EXP]{\draw_point_diff:nn}
+%   \begin{syntax}
+%     \cs{draw_point_diff:nn} \marg{point expr1} \marg{point expr2}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}[EXP]{\draw_point_scale:nn}
+%   \begin{syntax}
+%     \cs{draw_point_scale:nn} \marg{scale} \marg{point expr}
+%   \end{syntax}
+% \end{function}
 %
 % \begin{function}[EXP]{\draw_set_xvec:n, \draw_set_yvec:n, \draw_set_zvec:n}
 %   \begin{syntax}
 %     \cs{draw_set_xvec:n} \marg{point expr}
 %   \end{syntax}
+% \end{function}
 %
 % \begin{function}[EXP]{\draw_point_vec:nn, \draw_point_vec:nnn}
 %   \begin{syntax}
 %     \cs{draw_point_vec:nn} \marg{xscale} \marg{yscale}
 %     \cs{draw_point_vec:nnn} \marg{xscale} \marg{yscale} \mag{zscale}
 %   \end{syntax}
+% \end{function}
 %
 % \begin{function}[EXP]{\draw_point_linejoin:nnnn}
 %   \begin{syntax}
 %     \cs{draw_point_linejoin:nn} \marg{P1} \marg{P2} \marg{P3} \marg{P4}
 %   \end{syntax}
+% \end{function}
 %
 % \end{documentation}
 %
