l3draw: Point normalisation

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -91,7 +91,13 @@
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_set_xvec:n, \draw_set_yvec:n, \draw_set_zvec:n}
+% \begin{function}[EXP]{\draw_point_nomalise:n}
+%   \begin{syntax}
+%     \cs{draw_point_nomalise:nn} \marg{point expr}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}{\draw_set_xvec:n, \draw_set_yvec:n, \draw_set_zvec:n}
 %   \begin{syntax}
 %     \cs{draw_set_xvec:n} \marg{point expr}
 %   \end{syntax}
