--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -186,6 +186,43 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\draw_point_normalise:n}
+% \begin{macro}[EXP]{\@@_point_normalise:n, \@@_point_normalise:f}
+% \begin{macro}[EXP]{\@@_point_normalise:nn, \@@_point_normalise:ff}
+% \begin{macro}[EXP]{\@@_point_normalise:nnn, \@@_point_normalise:fnn}
+%   Only a single point expression so the expansion is done here. The
+%   outcomes are easy enough
+%   \[
+%     P_{x} = \frac{x}{x^{2} + y^{2}} \quad
+%     P_{y} = \frac{y}{x^{2} + y^{2}}
+%   \]
+%   with the obvious optimisation of only evaluating the denominator
+%   once.
+%    \begin{macrocode}
+\cs_new:Npn \draw_point_normalise:n #1
+  { \@@_point_normalise:f {#1} }
+\cs_new:Npn \@@_point_normalise:n #1
+  { \@@_point_normalise:ff #1 }
+\cs_generate_variant:Nn \@@_point_normalise:n { f }
+\cs_new:Npn \@@_point_normalise:nn #1#2
+  {
+    \@@_point_normalise:fnn
+      { \fp_eval:n { #1 * #1 + #2 * #2 } }
+      {#1} {#2}
+  }
+\cs_generate_variant:Nn \@@_point_normalise:nn { ff }
+\cs_new:Npn \@@_point_normalise:nnn #1#2#3
+  {
+    { \fp_to_dim:n { #2 / #1 } }
+    { \fp_to_dim:n { #3 / #1 } }
+  }
+\cs_generate_variant:Nn \@@_point_normalise:nnn { f }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Intersection calculations}
 %
 % \begin{macro}[EXP]{\draw_point_linejoin:nnnn}
