l3draw: Vector point functions will be subdivided

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -351,16 +351,16 @@
 \draw_set_zvec:n { \draw_point_coord:nn { -0.385cm } { -0.385cm } }
 %    \end{macrocode}
 %
-% \begin{macro}[EXP]{\draw_point_vec:nn}
-% \begin{macro}[EXP]{\@@_point_vec:nn, \@@_point_vec:ff}
-% \begin{macro}[EXP]{\draw_point_vec:nnn}
-% \begin{macro}[EXP]{\@@_point_vec:nnn, \@@_point_vec:fff}
+% \begin{macro}[EXP]{\draw_point_vec_coord:nn}
+% \begin{macro}[EXP]{\@@_point_vec_coord:nn, \@@_point_vec_coord:ff}
+% \begin{macro}[EXP]{\draw_point_vec_coord:nnn}
+% \begin{macro}[EXP]{\@@_point_vec_coord:nnn, \@@_point_vec_coord:fff}
 %   Force a single evaluation of each factor, then use these to work out the
 %   underlying point.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_vec:nn #1#2
-  { \@@_point_vec:ff { \fp_eval:n {#1} } { \fp_eval:n {#2} } }
-\cs_new:Npn \@@_point_vec:nn #1#2
+\cs_new:Npn \draw_point_vec_coord:nn #1#2
+  { \@@_point_vec_coord:ff { \fp_eval:n {#1} } { \fp_eval:n {#2} } }
+\cs_new:Npn \@@_point_vec_coord:nn #1#2
   {
     {
       \fp_to_dim:n
@@ -371,13 +371,13 @@
         { #1 * \l_@@_xvec_y_dim + #2 * \l_@@_yvec_y_dim }
     }
   }
-\cs_generate_variant:Nn \@@_point_vec:nn { ff }
-\cs_new:Npn \draw_point_vec:nnn #1#2#3
+\cs_generate_variant:Nn \@@_point_vec_coord:nn { ff }
+\cs_new:Npn \draw_point_vec_coord:nnn #1#2#3
   {
-    \@@_point_vec:fff
+    \@@_point_vec_coord:fff
       { \fp_eval:n {#1} } { \fp_eval:n {#2} } { \fp_eval:n {#3} }
   }
-\cs_new:Npn \@@_point_vec:nnn #1#2#3
+\cs_new:Npn \@@_point_vec_coord:nnn #1#2#3
   {
     {
       \fp_to_dim:n
@@ -396,7 +396,7 @@
         }
     }
   }
-\cs_generate_variant:Nn \@@_point_vec:nnn { fff }
+\cs_generate_variant:Nn \@@_point_vec_coord:nnn { fff }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
