--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -103,10 +103,10 @@
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_vec:nn, \draw_point_vec:nnn}
+% \begin{function}[EXP]{\draw_point_vec_coord:nn, \draw_point_vec_coord:nnn}
 %   \begin{syntax}
-%     \cs{draw_point_vec:nn} \marg{xscale} \marg{yscale}
-%     \cs{draw_point_vec:nnn} \marg{xscale} \marg{yscale} \mag{zscale}
+%     \cs{draw_point_vec_coord:nn} \marg{xscale} \marg{yscale}
+%     \cs{draw_point_vec_coord:nnn} \marg{xscale} \marg{yscale} \mag{zscale}
 %   \end{syntax}
 % \end{function}
 %
