Doc tweak [ci skip]

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -191,7 +191,8 @@
 % \begin{macro}[EXP]{\@@_point_normalise:nn, \@@_point_normalise:ff}
 % \begin{macro}[EXP]{\@@_point_normalise:nnn, \@@_point_normalise:fnn}
 %   Only a single point expression so the expansion is done here. The
-%   outcomes are easy enough
+%   outcome is the normalised vector from $(0,0)$ in the direction of
+%   the point, \emph{i.e.}
 %   \[
 %     P_{x} = \frac{x}{x^{2} + y^{2}} \quad
 %     P_{y} = \frac{y}{x^{2} + y^{2}}
