--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -225,13 +225,13 @@
 %
 % \subsection{Intersection calculations}
 %
-% \begin{macro}[EXP]{\draw_point_linejoin:nnnn}
-% \begin{macro}[EXP]{\@@_point_linejoin:nnnnnn}
-% \begin{macro}[EXP]{\@@_point_linejoin:nnnnnnnn}
+% \begin{macro}[EXP]{\draw_point_intersect_lines:nnnn}
+% \begin{macro}[EXP]{\@@_point_intersect_lines:nnnnnn}
+% \begin{macro}[EXP]{\@@_point_intersect_lines:nnnnnnnn}
 % \begin{macro}[EXP]
-%   {\@@_point_linejoin_aux:nnnnnn, \@@_point_linejoin_aux:ffffff}
+%   {\@@_point_intersect_lines_aux:nnnnnn, \@@_point_intersect_lines_aux:ffffff}
 % \begin{macro}[EXP]
-%   {\@@_point_linejoin_aux:fnnnnnn, \@@_point_linejoin_aux:fnnnnnn}
+%   {\@@_point_intersect_lines_aux:fnnnnnn, \@@_point_intersect_lines_aux:fnnnnnn}
 %    The intersection point~$P$ between a line joining points $(x_{1}, y_{1})$
 %    and $(x_{2}, y_{2})$ with a second line joining points $(x_{3}, y_{3})$
 %    and $(x_{4}, y_{4})$ can be calculated using the formulae
@@ -253,21 +253,21 @@
 %    the intersection. (Expansion and argument re-ordering is much less work
 %    than additional floating point calculations.)
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_linejoin:nnnn #1#2#3#4
+\cs_new:Npn \draw_point_intersect_lines:nnnn #1#2#3#4
   {
     \@@_point_expand:nnN {#1} {#2}
-      \@@_point_linejoin:nnnnnn
+      \@@_point_intersect_lines:nnnnnn
       {#3} {#4}
   }
-\cs_new:Npn \@@_point_linejoin:nnnnnn #1#2#3#4#5#6
+\cs_new:Npn \@@_point_intersect_lines:nnnnnn #1#2#3#4#5#6
   {
     \@@_point_expand:nnN {#5} {#6}
-      \@@_point_linejoin:nnnnnnnn
+      \@@_point_intersect_lines:nnnnnnnn
       {#1} {#2} {#3} {#4}
   }
-\cs_new:Npn \@@_point_linejoin:nnnnnnnn #1#2#3#4#5#6#7#8
+\cs_new:Npn \@@_point_intersect_lines:nnnnnnnn #1#2#3#4#5#6#7#8
   {
-    \@@_point_linejoin_aux:ffffff
+    \@@_point_intersect_lines_aux:ffffff
       { \fp_eval:n { #1 * #4 - #2 * #3 } }
       { \fp_eval:n { #5 * #8 - #6 * #7 } }
       { \fp_eval:n { #1 - #3 } }
@@ -275,19 +275,19 @@
       { \fp_eval:n { #2 - #4 } }
       { \fp_eval:n { #6 - #8 } }
   }
-\cs_new:Npn \@@_point_linejoin_aux:nnnnnn #1#2#3#4#5#6
+\cs_new:Npn \@@_point_intersect_lines_aux:nnnnnn #1#2#3#4#5#6
   {
-    \@@_point_linejoin_aux:fnnnnnn
+    \@@_point_intersect_lines_aux:fnnnnnn
       { \fp_eval:n { #3 * #6 - #5 * #4 } }
       {#1} {#2} {#3} {#4} {#5} {#6}
   }
-\cs_generate_variant:Nn \@@_point_linejoin_aux:nnnnnn { ffffff }
-\cs_new:Npn \@@_point_linejoin_aux:nnnnnnn #1#2#3#4#5#6#7
+\cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnn { ffffff }
+\cs_new:Npn \@@_point_intersect_lines_aux:nnnnnnn #1#2#3#4#5#6#7
   {
     { \fp_to_dim:n { (#2 * #5 - #3 * #6 ) / #1 } }
     { \fp_to_dim:n { (#2 * #7 - #3 * #6 ) / #1 } }
   }
-\cs_generate_variant:Nn \@@_point_linejoin_aux:nnnnnnn { f }
+\cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnnn { f }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
