l3draw: Correct line-intersection code

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -265,6 +265,20 @@
       \@@_point_intersect_lines:nnnnnnnn
       {#1} {#2} {#3} {#4}
   }
+%    \end{macrocode}
+%   At this stage we have all of the information we need, fully expanded:
+%   \begin{enumerate}[label = \#\arabic*, font = \ttfamily]
+%     \item $x_{3}$
+%     \item $y_{3}$
+%     \item $x_{4}$
+%     \item $y_{4}$
+%     \item $x_{1}$
+%     \item $y_{1}$
+%     \item $x_{2}$
+%     \item $y_{2}$
+%   \end{enumerate}
+%   so now just have to do all of the calculation.
+%    \begin{macrocode}
 \cs_new:Npn \@@_point_intersect_lines:nnnnnnnn #1#2#3#4#5#6#7#8
   {
     \@@_point_intersect_lines_aux:ffffff
@@ -278,14 +292,14 @@
 \cs_new:Npn \@@_point_intersect_lines_aux:nnnnnn #1#2#3#4#5#6
   {
     \@@_point_intersect_lines_aux:fnnnnnn
-      { \fp_eval:n { #3 * #6 - #5 * #4 } }
+      { \fp_eval:n { #4 * #5 - #6 * #3 } }
       {#1} {#2} {#3} {#4} {#5} {#6}
   }
 \cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnn { ffffff }
 \cs_new:Npn \@@_point_intersect_lines_aux:nnnnnnn #1#2#3#4#5#6#7
   {
-    { \fp_to_dim:n { (#2 * #5 - #3 * #6 ) / #1 } }
-    { \fp_to_dim:n { (#2 * #7 - #3 * #6 ) / #1 } }
+    { \fp_to_dim:n { ( #3 * #4 - #2 * #5 ) / #1 } }
+    { \fp_to_dim:n { ( #3 * #6 - #2 * #7 ) / #1 } }
   }
 \cs_generate_variant:Nn \@@_point_intersect_lines_aux:nnnnnnn { f }
 %    \end{macrocode}
