l3draw: Better name for normalisation
Plus tests and fixes!

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -185,38 +185,38 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\draw_point_normalise:n}
-% \begin{macro}[EXP]{\@@_point_normalise:n, \@@_point_normalise:f}
-% \begin{macro}[EXP]{\@@_point_normalise:nn, \@@_point_normalise:ff}
-% \begin{macro}[EXP]{\@@_point_normalise:nnn, \@@_point_normalise:fnn}
+% \begin{macro}[EXP]{\draw_point_unit_vector:n}
+% \begin{macro}[EXP]{\@@_point_unit_vector:n, \@@_point_unit_vector:f}
+% \begin{macro}[EXP]{\@@_point_unit_vector:nn, \@@_point_unit_vector:ff}
+% \begin{macro}[EXP]{\@@_point_unit_vector:nnn, \@@_point_unit_vector:fnn}
 %   Only a single point expression so the expansion is done here. The
 %   outcome is the normalised vector from $(0,0)$ in the direction of
 %   the point, \emph{i.e.}
 %   \[
-%     P_{x} = \frac{x}{x^{2} + y^{2}} \quad
-%     P_{y} = \frac{y}{x^{2} + y^{2}}
+%     P_{x} = \frac{x}\sqrt{{x^{2} + y^{2}}} \quad
+%     P_{y} = \frac{y}{\sqrt{x^{2} + y^{2}}}
 %   \]
 %   with the obvious optimisation of only evaluating the denominator
 %   once.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_normalise:n #1
-  { \@@_point_normalise:f {#1} }
-\cs_new:Npn \@@_point_normalise:n #1
-  { \@@_point_normalise:ff #1 }
-\cs_generate_variant:Nn \@@_point_normalise:n { f }
-\cs_new:Npn \@@_point_normalise:nn #1#2
+\cs_new:Npn \draw_point_unit_vector:n #1
+  { \@@_point_unit_vector:f {#1} }
+\cs_new:Npn \@@_point_unit_vector:n #1
+  { \@@_point_unit_vector:ff #1 }
+\cs_generate_variant:Nn \@@_point_unit_vector:n { f }
+\cs_new:Npn \@@_point_unit_vector:nn #1#2
   {
-    \@@_point_normalise:fnn
-      { \fp_eval:n { #1 * #1 + #2 * #2 } }
+    \@@_point_unit_vector:fnn
+      { \fp_eval:n { sqrt( (#1) ^ 2 + (#2) ^ 2 ) } }
       {#1} {#2}
   }
-\cs_generate_variant:Nn \@@_point_normalise:nn { ff }
-\cs_new:Npn \@@_point_normalise:nnn #1#2#3
+\cs_generate_variant:Nn \@@_point_unit_vector:nn { ff }
+\cs_new:Npn \@@_point_unit_vector:nnn #1#2#3
   {
     { \fp_to_dim:n { #2 / #1 } }
     { \fp_to_dim:n { #3 / #1 } }
   }
-\cs_generate_variant:Nn \@@_point_normalise:nnn { f }
+\cs_generate_variant:Nn \@@_point_unit_vector:nnn { f }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
