l3draw: Interpolation for lines (vectors)

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -130,6 +130,18 @@
 %   % Note interface, cf. pgf
 % \end{function}
 %
+% \begin{function}[EXP]{\draw_point_line_part:nnn}
+%   \begin{syntax}
+%     \cs{draw_point_line_part:nnn} \marg{part} \marg{point expr1} \marg{point expr2}
+%   \end{syntax}
+% \end{function}
+%
+% \begin{function}[EXP]{\draw_point_line_distance:nnn}
+%   \begin{syntax}
+%     \cs{draw_point_line_distance:nnn} \marg{distance} \marg{point expr1} \marg{point expr2}
+%   \end{syntax}
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
