--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -465,81 +465,81 @@
 %
 % \subsection{Interpolation on a line (vector) or arc}
 %
-% \begin{macro}[EXP]{\draw_point_line_part:nnn}
-% \begin{macro}[EXP]{\@@_point_line_part:nnnnn}
+% \begin{macro}[EXP]{\draw_point_interpolate_line:nnn}
+% \begin{macro}[EXP]{\@@_point_interpolate_line:nnnnn}
 % \begin{macro}[EXP]
 %   {
-%     \@@_point_line_part_aux:nnnnn,
-%     \@@_point_line_part_aux:fnnnn,
+%     \@@_point_interpolate_line_aux:nnnnn,
+%     \@@_point_interpolate_line_aux:fnnnn,
 %   }
 % \begin{macro}[EXP]
 %   {
-%     \@@_point_line_part_aux:nnnnnn,
-%     \@@_point_line_part_aux:fnnnnn,
+%     \@@_point_interpolate_line_aux:nnnnnn,
+%     \@@_point_interpolate_line_aux:fnnnnn,
 %   }
 %   Simple maths after expansion.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_line_part:nnn #1#2#3
+\cs_new:Npn \draw_point_interpolate_line:nnn #1#2#3
   {
     \@@_point_expand:nnN {#2} {#3}
-      \@@_point_line_part:nnnnn
+      \@@_point_interpolate_line:nnnnn
       {#1}
   }
-\cs_new:Npn \@@_point_line_part:nnnnn #1#2#3#4#5
+\cs_new:Npn \@@_point_interpolate_line:nnnnn #1#2#3#4#5
   {
-    \@@_point_line_part_aux:fnnnn { \fp_eval:n {#5} }
+    \@@_point_interpolate_line_aux:fnnnn { \fp_eval:n {#5} }
       {#1} {#2} {#3} {#4}
   }
-\cs_new:Npn \@@_point_line_part_aux:nnnnn #1#2#3#4#5
+\cs_new:Npn \@@_point_interpolate_line_aux:nnnnn #1#2#3#4#5
   {
-    \@@_point_line_part_aux:fnnnnn { \fp_eval:n { 1 - #1 } }
+    \@@_point_interpolate_line_aux:fnnnnn { \fp_eval:n { 1 - #1 } }
       {#1} {#2} {#3} {#4} {#5}
   }
-\cs_generate_variant:Nn \@@_point_line_part_aux:nnnnn { f }
-\cs_new:Npn \@@_point_line_part_aux:nnnnnn #1#2#3#4#5#6
+\cs_generate_variant:Nn \@@_point_interpolate_line_aux:nnnnn { f }
+\cs_new:Npn \@@_point_interpolate_line_aux:nnnnnn #1#2#3#4#5#6
   {
     { \fp_to_dim:n { #2 * #3 + #1 * #5 } }
     { \fp_to_dim:n { #2 * #4 + #1 * #6 } }
   }
-\cs_generate_variant:Nn \@@_point_line_part_aux:nnnnnn { f }
+\cs_generate_variant:Nn \@@_point_interpolate_line_aux:nnnnnn { f }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\draw_point_line_distance:nnn}
-% \begin{macro}[EXP]{\@@_point_line_distance:nnnnn}
+% \begin{macro}[EXP]{\draw_point_interpolate_distance:nnn}
+% \begin{macro}[EXP]{\@@_point_interpolate_distance:nnnnn}
 % \begin{macro}[EXP]
 %   {
-%     \@@_point_line_distance_aux:nnnnn,
-%     \@@_point_line_distance_aux:fnnnn,
+%     \@@_point_interpolate_distance_aux:nnnnn,
+%     \@@_point_interpolate_distance_aux:fnnnn,
 %   }
 % \begin{macro}[EXP]
 %   {
-%     \@@_point_line_distance_aux:nnnnnn,
-%     \@@_point_line_distance_aux:fnnnnn,
+%     \@@_point_interpolate_distance_aux:nnnnnn,
+%     \@@_point_interpolate_distance_aux:fnnnnn,
 %   }
 %   Same idea but using the normalised length to obtain the scale factor.
 %    \begin{macrocode}
-\cs_new:Npn \draw_point_line_distance:nnn #1#2#3
+\cs_new:Npn \draw_point_interpolate_distance:nnn #1#2#3
   {
     \@@_point_expand:nnN {#2} {#3}
-      \@@_point_line_distance:nnnnn
+      \@@_point_interpolate_distance:nnnnn
       {#1}
   }
-\cs_new:Npn \@@_point_line_distance:nnnnn #1#2#3#4#5
+\cs_new:Npn \@@_point_interpolate_distance:nnnnn #1#2#3#4#5
   {
-    \@@_point_line_distance_aux:fnnnn
+    \@@_point_interpolate_distance_aux:fnnnn
       { \fp_eval:n { (#5) / sqrt ( ( #3 - #1 ) ^ 2 + ( #4 - #2 ) ^ 2 ) } }
       {#1} {#2} {#3} {#4}
   }
-\cs_new:Npn \@@_point_line_distance_aux:nnnnn #1#2#3#4#5
+\cs_new:Npn \@@_point_interpolate_distance_aux:nnnnn #1#2#3#4#5
   {
     { \fp_to_dim:n { #2 + #1 * #4 } }
     { \fp_to_dim:n { #3 + #1 * #5 } }
   }
-\cs_generate_variant:Nn \@@_point_line_distance_aux:nnnnn { f }
+\cs_generate_variant:Nn \@@_point_interpolate_distance_aux:nnnnn { f }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
