--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -130,15 +130,15 @@
 %   % Note interface, cf. pgf
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_line_part:nnn}
+% \begin{function}[EXP]{\draw_point_interpolate_line:nnn}
 %   \begin{syntax}
-%     \cs{draw_point_line_part:nnn} \marg{part} \marg{point expr1} \marg{point expr2}
+%     \cs{draw_point_interpolate_line:nnn} \marg{part} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_line_distance:nnn}
+% \begin{function}[EXP]{\draw_point_interpolate_distance:nnn}
 %   \begin{syntax}
-%     \cs{draw_point_line_distance:nnn} \marg{distance} \marg{point expr1} \marg{point expr2}
+%     \cs{draw_point_interpolate_distance:nnn} \marg{distance} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
