l3draw: Interpolation in arcs
Here there is a difference from pgf: we only get the point.
In pgf, a shortcut is used to save the tangent vector in this code.
As we are not using global variables for data return, that doesn't work here.

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -142,6 +142,13 @@
 %   \end{syntax}
 % \end{function}
 %
+% \begin{function}[EXP]{\draw_point_interpolate_arc:nnn}
+%   \begin{syntax}
+%     \cs{draw_point_interpolate_line:nnn} \marg{part}
+%       \marg{center} \marg{minor axis} \marg{major axis} \marg{angle1} \marg{angle2}
+%   \end{syntax}
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
