--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -554,6 +554,86 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}[EXP]{\draw_point_interpolate_arc:nnnnnn}
+% \begin{macro}[EXP]{\@@_point_interpolate_arc_auxi:nnnnnnnn}
+% \begin{macro}[EXP]{\@@_point_interpolate_arc_auxii:nnnnnnnn}
+% \begin{macro}[EXP]
+%   {
+%     \@@_point_interpolate_arc_auxiii:nnnnnnnn,
+%     \@@_point_interpolate_arc_auxiii:fnnnnnnn
+%   }
+% \begin{macro}[EXP]
+%   {
+%     \@@_point_interpolate_arc_auxiv:nnnnnnn,
+%     \@@_point_interpolate_arc_auxiv:fnnnnnn
+%   }
+% \begin{macro}[EXP]
+%   {
+%     \@@_point_interpolate_arc_auxv:nnnnnnn,
+%     \@@_point_interpolate_arc_auxv:fnnnnnn
+%   }
+%    \begin{macrocode}
+\cs_new:Npn \draw_point_interpolate_arc:nnnnnn #1#2#3#4#5#6
+  {
+    \@@_point_expand:nnN {#2} {#3}
+      \@@_point_interpolate_arc_auxi:nnnnnnnn
+      {#1} {#4} {#5} {#6}
+  }
+\cs_new:Npn \@@_point_interpolate_arc_auxi:nnnnnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_point_expand:nnN {#6} { { } { } }
+      \@@_point_interpolate_arc_auxii:nnnnnnnn
+      {#5} { {#1} {#2} {#3} {#4} } {#7} {#8}
+  }
+\cs_new:Npn \@@_point_interpolate_arc_auxii:nnnnnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_point_interpolate_arc_auxiii:fnnnnnnnn
+      { \fp_eval:n {#5} } {#7} {#8} #6 {#1} {#2}
+  }
+%    \end{macrocode}
+%   At this stage, the three co-ordinate pairs are fully expanded but somewhat
+%   re-ordered:
+%   \begin{enumerate}[label = \#\arabic*, font = \ttfamily]
+%     \item $p$
+%     \item $\theta_{1}$
+%     \item $\theta_{2}$
+%     \item $x_{c}$
+%     \item $y_{c}$
+%     \item $x_{a1}$
+%     \item $y_{a1}$
+%     \item $x_{a2}$
+%     \item $y_{a2}$
+%   \end{enumerate}
+%   We are now in a position to find the target angle, and from that
+%   the sine and cosine required.
+%    \begin{macrocode}
+\cs_new:Npn \@@_point_interpolate_arc_auxiii:nnnnnnnnn #1#2#3#4#5#6#7#8#9
+  {
+    \@@_point_interpolate_arc_auxiv:fnnnnnn
+      { \fp_eval:n { #1 * (#3) + ( 1 - #1 ) * (#2) } }
+      {#4} {#5} {#6} {#7} {#8} {#9}
+  }
+\cs_generate_variant:Nn \@@_point_interpolate_arc_auxiii:nnnnnnnnn { f }
+\cs_new:Npn \@@_point_interpolate_arc_auxiv:nnnnnnn #1#2#3#4#5#6#7
+  {
+    \@@_point_interpolate_arc_auxv:ffnnnnnn
+      { \fp_eval:n { cosd (#1) } }
+      { \fp_eval:n { sind (#1) } }
+      {#2} {#3} {#4} {#5} {#6} {#7}
+  }
+\cs_generate_variant:Nn \@@_point_interpolate_arc_auxiv:nnnnnnn { f }
+\cs_new:Npn \@@_point_interpolate_arc_auxv:nnnnnnnn #1#2#3#4#5#6#7#8
+  {
+    { \fp_to_dim:n { #3 + #1 * #5 + #2 * #7 } }
+    { \fp_to_dim:n { #4 + #1 * #6 + #2 * #8 } }
+  }
+\cs_generate_variant:Nn \@@_point_interpolate_arc_auxv:nnnnnnnn { ff }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \subsection{Vector support}
 %
 % As well as co-ordinates relative to the drawing 
