Code comments [ci skip]

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -572,6 +572,10 @@
 %     \@@_point_interpolate_arc_auxv:nnnnnnn,
 %     \@@_point_interpolate_arc_auxv:fnnnnnn
 %   }
+%   Finding a point on an ellipse arc is relatively easy: find the correct
+%   angle between the two given, use the sine and cosine of that angle,
+%   apply to the axes. We just have to work a bit with the co-ordinate
+%   expansion.
 %    \begin{macrocode}
 \cs_new:Npn \draw_point_interpolate_arc:nnnnnn #1#2#3#4#5#6
   {
