Misplaced brace [ci skip]

--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -193,7 +193,7 @@
 %   outcome is the normalised vector from $(0,0)$ in the direction of
 %   the point, \emph{i.e.}
 %   \[
-%     P_{x} = \frac{x}\sqrt{{x^{2} + y^{2}}} \quad
+%     P_{x} = \frac{x}{\sqrt{x^{2} + y^{2}}} \quad
 %     P_{y} = \frac{y}{\sqrt{x^{2} + y^{2}}}
 %   \]
 %   with the obvious optimisation of only evaluating the denominator
