--- a/l3trial/l3draw/l3draw-points.dtx
+++ b/l3trial/l3draw/l3draw-points.dtx
@@ -637,6 +637,8 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
 %
 % \begin{macro}[EXP]{\draw_point_interpolate_curve:nnnnn}
 % \begin{macro}[EXP]{\draw_point_interpolate_curve_auxi:nnnnnnn}
