l3draw: Point expansions are rEXP
At least formally: two f-type cycles are enough,
but that is an internal thing.

--- a/l3trial/l3draw/l3draw.dtx
+++ b/l3trial/l3draw/l3draw.dtx
@@ -62,37 +62,37 @@
 %
 % \subsection{Points}
 %
-% \begin{function}[EXP]{\draw_point_coord:nn}
+% \begin{function}[rEXP]{\draw_point_coord:nn}
 %   \begin{syntax}
 %     \cs{draw_point_coord:nn} \marg{x} \marg{y}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_polar:nn}
+% \begin{function}[rEXP]{\draw_point_polar:nn}
 %   \begin{syntax}
 %     \cs{draw_point_polar:nn} \marg{angle} \marg{length}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_add:nn}
+% \begin{function}[rEXP]{\draw_point_add:nn}
 %   \begin{syntax}
 %     \cs{draw_point_add:nn} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_diff:nn}
+% \begin{function}[rEXP]{\draw_point_diff:nn}
 %   \begin{syntax}
 %     \cs{draw_point_diff:nn} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_scale:nn}
+% \begin{function}[rEXP]{\draw_point_scale:nn}
 %   \begin{syntax}
 %     \cs{draw_point_scale:nn} \marg{scale} \marg{point expr}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_unit_vector:n}
+% \begin{function}[rEXP]{\draw_point_unit_vector:n}
 %   \begin{syntax}
 %     \cs{draw_point_unit_vector:n} \marg{point expr}
 %   \end{syntax}
@@ -104,26 +104,26 @@
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_vec_coord:nn, \draw_point_vec_coord:nnn}
+% \begin{function}[rEXP]{\draw_point_vec_coord:nn, \draw_point_vec_coord:nnn}
 %   \begin{syntax}
 %     \cs{draw_point_vec_coord:nn} \marg{xscale} \marg{yscale}
 %     \cs{draw_point_vec_coord:nnn} \marg{xscale} \marg{yscale} \marg{zscale}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_vec_polar:nn}
+% \begin{function}[rEXP]{\draw_point_vec_polar:nn}
 %   \begin{syntax}
 %     \cs{draw_point_vec_polar:nn} \marg{angle} \marg{length}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_intersect_lines:nnnn}
+% \begin{function}[rEXP]{\draw_point_intersect_lines:nnnn}
 %   \begin{syntax}
 %     \cs{draw_point_intersect_lines:nnnn} \marg{P1} \marg{P2} \marg{P3} \marg{P4}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_intersect_circles:nnnn}
+% \begin{function}[rEXP]{\draw_point_intersect_circles:nnnn}
 %   \begin{syntax}
 %     \cs{draw_point_intersect_circles:nnnnn}
 %       \marg{center1} \marg{radius1} \marg{center2} \marg{radius2} \marg{root}
@@ -131,19 +131,19 @@
 %   % Note interface, cf. pgf
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_interpolate_line:nnn}
+% \begin{function}[rEXP]{\draw_point_interpolate_line:nnn}
 %   \begin{syntax}
 %     \cs{draw_point_interpolate_line:nnn} \marg{part} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_interpolate_distance:nnn}
+% \begin{function}[rEXP]{\draw_point_interpolate_distance:nnn}
 %   \begin{syntax}
 %     \cs{draw_point_interpolate_distance:nnn} \marg{distance} \marg{point expr1} \marg{point expr2}
 %   \end{syntax}
 % \end{function}
 %
-% \begin{function}[EXP]{\draw_point_interpolate_arc:nnn}
+% \begin{function}[rEXP]{\draw_point_interpolate_arc:nnn}
 %   \begin{syntax}
 %     \cs{draw_point_interpolate_line:nnn} \marg{part}
 %       \marg{center} \marg{minor axis} \marg{major axis} \marg{angle1} \marg{angle2}
